# cmake_linux_2d_snake_game

./: CMakeLists.txt  CMakePresets.json  README.md
Headers/: Assets.h  Game.h  MainMenu.h  Snake.h  State.h  StateMachine.h  StateManager.h
Sources/: Assets.cpp  Game.cpp  MainMenu.cpp  Snake.cpp  StateMachine.cpp  StateManager.cpp  main.cpp
